c4prj1_deck/grade.txt
Grading at Tue Sep 22 05:28:12 UTC 2020
Compiling deck.c -> deck.o
deck.c: In function ‘build_remaining_deck’:
deck.c:92:63: error: invalid operands to binary != (have ‘card_t {aka struct card_tag}’ and ‘int’)
       if (deck_contains(excluded_cards, *(hands[i]->cards[j]) != 1)) {
                                                               ^
Compilation of deck.c failed

Overall Grade: F
